examples/gateway-api/2-gateway.yaml
# GatewayClass "nginx" is created automatically by the NGINX Gateway Fabric Helm chart.
# No need to apply it manually.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: api-gateway
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP
